--- a/Online-Clinic/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Online-Clinic/Areas/Identity/Pages/Account/Register.cshtml
@@ -26,6 +26,17 @@
                 <span asp-validation-for="Input.KullanıcıAdı" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.Role"></label>
+                <select asp-for="Input.Role">
+                    <option disabled>Üyelik Tipi Seçiniz</option>
+                    <option value="Seçiniz">Seçiniz</option>
+                    <option value="Bağışçı">Bağışçı</option>
+                    <option value="Doktor">Doktor</option>
+                    <option value="Hasta">Hasta</option>
+                </select>
+                <span asp-validation-for="Input.Role" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.Ad"></label>
                 <input asp-for="Input.Ad" class="form-control" />
                 <span asp-validation-for="Input.Ad" class="text-danger"></span>
@@ -37,8 +48,19 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.DoğumTarihi"></label>
-                <input asp-for="Input.DoğumTarihi" class="form-control" />
+                <input asp-for="Input.DoğumTarihi" class="form-control" type="date" />
                 <span asp-validation-for="Input.DoğumTarihi" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Cinsiyet"></label>
+                <select asp-for="Input.Cinsiyet">
+                    <option disabled>Cinsiyet Seçiniz</option>
+                    <option value="Seçiniz">Seçiniz</option>
+                    <option value="Belirtmek istemiyorum">Belirtmek istemiyorum</option>
+                    <option value="Kadın">Kadın</option>
+                    <option value="Erkek">Erkek</option>
+                </select>
+                <span asp-validation-for="Input.Cinsiyet" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
