--- a/Online-Clinic/Views/Home/Index.cshtml
+++ b/Online-Clinic/Views/Home/Index.cshtml
@@ -130,57 +130,57 @@
         <div class="row">
 
             <div class="col-md-12 col-sm-12">-->
-                <!-- SECTION TITLE -->
-                <!--<div class="section-title wow fadeInUp" data-wow-delay="0.1s" style="visibility: hidden; animation-delay: 0.1s; animation-name: none;">
-                    <h2>Latest News</h2>
+<!-- SECTION TITLE -->
+<!--<div class="section-title wow fadeInUp" data-wow-delay="0.1s" style="visibility: hidden; animation-delay: 0.1s; animation-name: none;">
+        <h2>Latest News</h2>
+    </div>
+</div>
+
+<div class="col-md-4 col-sm-6">-->
+<!-- NEWS THUMB -->
+<!--<div class="news-thumb wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
+        <a href="news-detail.html">
+            <img src="~/HomeIndex/images/news-image1.jpg" class="img-responsive" alt="">
+        </a>
+        <div class="news-info">
+            <span>March 08, 2018</span>
+            <h3><a href="news-detail.html">About Amazing Technology</a></h3>
+            <p>Maecenas risus neque, placerat volutpat tempor ut, vehicula et felis.</p>
+            <div class="author">
+                <img src="~/HomeIndex/images/author-image.jpg" class="img-responsive" alt="">
+                <div class="author-info">
+                    <h5>Jeremie Carlson</h5>
+                    <p>CEO / Founder</p>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
 
-            <div class="col-md-4 col-sm-6">-->
-                <!-- NEWS THUMB -->
-                <!--<div class="news-thumb wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                    <a href="news-detail.html">
-                        <img src="~/HomeIndex/images/news-image1.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="news-info">
-                        <span>March 08, 2018</span>
-                        <h3><a href="news-detail.html">About Amazing Technology</a></h3>
-                        <p>Maecenas risus neque, placerat volutpat tempor ut, vehicula et felis.</p>
-                        <div class="author">
-                            <img src="~/HomeIndex/images/author-image.jpg" class="img-responsive" alt="">
-                            <div class="author-info">
-                                <h5>Jeremie Carlson</h5>
-                                <p>CEO / Founder</p>
-                            </div>
-                        </div>
-                    </div>
+<div class="col-md-4 col-sm-6">-->
+<!-- NEWS THUMB -->
+<!--<div class="news-thumb wow fadeInUp" data-wow-delay="0.6s" style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
+        <a href="news-detail.html">
+            <img src="~/HomeIndex/images/news-image2.jpg" class="img-responsive" alt="">
+        </a>
+        <div class="news-info">
+            <span>February 20, 2018</span>
+            <h3><a href="news-detail.html">Introducing a new healing process</a></h3>
+            <p>Fusce vel sem finibus, rhoncus massa non, aliquam velit. Nam et est ligula.</p>
+            <div class="author">
+                <img src="~/HomeIndex/images/author-image.jpg" class="img-responsive" alt="">
+                <div class="author-info">
+                    <h5>Jason Stewart</h5>
+                    <p>General Director</p>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
 
-            <div class="col-md-4 col-sm-6">-->
-                <!-- NEWS THUMB -->
-                <!--<div class="news-thumb wow fadeInUp" data-wow-delay="0.6s" style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
-                    <a href="news-detail.html">
-                        <img src="~/HomeIndex/images/news-image2.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="news-info">
-                        <span>February 20, 2018</span>
-                        <h3><a href="news-detail.html">Introducing a new healing process</a></h3>
-                        <p>Fusce vel sem finibus, rhoncus massa non, aliquam velit. Nam et est ligula.</p>
-                        <div class="author">
-                            <img src="~/HomeIndex/images/author-image.jpg" class="img-responsive" alt="">
-                            <div class="author-info">
-                                <h5>Jason Stewart</h5>
-                                <p>General Director</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">-->
-                <!-- NEWS THUMB -->
-                <!--<div class="news-thumb wow fadeInUp" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
+<div class="col-md-4 col-sm-6">-->
+<!-- NEWS THUMB -->
+<!--<div class="news-thumb wow fadeInUp" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
                     <a href="news-detail.html">
                         <img src="~/HomeIndex/images/news-image3.jpg" class="img-responsive" alt="">
                     </a>
@@ -214,23 +214,21 @@
 
             <div class="col-md-6 col-sm-6">
                 <!-- CONTACT FORM HERE -->
-                <form id="appointment-form" asp-controller="Randevu" asp-action="Create">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+                <form id="appointment-form" asp-controller="Randevu" asp-action="Create" method="post">
                     <!-- SECTION TITLE -->
                     <div class="section-title wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
                         <h2>Randevu Al</h2>
                     </div>
                     <div class="wow fadeInUp" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
+                        <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="col-md-6 col-sm-6">
-                            <label asp-for="TamAd">Tam Adınız</label>
-                            <input type="text" class="form-control" id="name" name="name">
-                            <span asp-validation-for="TamAd"></span>
+                            <label asp-for="AdSoyad">Tam Adınız</label>
+                            <input asp-for="AdSoyad" class="form-control" />
                         </div>
 
                         <div class="col-md-6 col-sm-6">
                             <label asp-for="Bölüm">Bölüm Seçiniz</label>
-                            <select class="form-control">
+                            <select class="form-control" asp-for="Bölüm">
                                 <option action>Seçiniz</option>
                                 <option>Beyin ve Sinir Cerrahisi</option>
                                 <option>Kalp ve Damar Cerrahisi</option>
@@ -248,27 +246,26 @@
 
                         <div class="col-md-6 col-sm-6">
                             <label asp-for="Tarih">Tarih Seçiniz</label>
-                            <input type="date" name="date" value="" class="form-control">
+                            <input asp-for="Tarih" type="date" class="form-control">
                         </div>
 
-                        <div class="col-md-6 col-sm-6">
+                        @*<div class="col-md-6 col-sm-6">
                             <label asp-for="Saat">Saat Seçiniz</label>
                             <input type="time" name="time" value="" class="form-control">
-                        </div>
+                        </div>*@
 
 
 
                         <div class="col-md-12 col-sm-12">
                             <label asp-for="Telefon">Telefon Numaranız</label>
-                            <input type="tel" class="form-control" id="phone" name="phone">
+                            <input asp-for="Telefon" class="form-control">
                             <label asp-for="Email">E-mail Adresiniz</label>
-                            <input type="email" class="form-control" id="email" name="email">
-                            <label asp-for="Mesaj">Eklemek İstediğiniz Bir Mesaj Var mı?</label>
-                            <textarea class="form-control" rows="5" id="message" name="message"></textarea>
+                            <input asp-for="Email" class="form-control" />
+                            @*<label asp-for="Mesaj">Eklemek İstediğiniz Bir Mesaj Var mı?</label>
+                                <textarea asp-for="Mesaj" class="form-control"></textarea>*@
                             <button type="submit" class="form-control" id="cf-submit" name="submit">Randevu Al</button>
                         </div>
                     </div>
-
                 </form>
             </div>
 
