--- a/Online-Clinic/Views/Home/Index.cshtml
+++ b/Online-Clinic/Views/Home/Index.cshtml
@@ -63,11 +63,11 @@
                     <img src="~/HomeIndex/images/team-image1.jpg" class="img-responsive" alt="">
 
                     <div class="team-info">
-                        <label></label>
-                        <p>General Principal</p>
+                        <h3>Ömer Göktaş</h3>
+                        <p>Çocuk Doktoru</p>
                         <div class="team-contact-info">
-                            <p><i class="fa fa-phone"></i> 010-020-0120</p>
-                            <p><i class="fa fa-envelope-o"></i> <a href="#">general@company.com</a></p>
+                            @*<p><i class="fa fa-phone"></i> 010-020-0120</p>*@
+                            <p><i class="fa fa-envelope-o"></i><a>omergoktas@gmail.com</a></p>
                         </div>
                         <ul class="social-icon">
                             <li><a href="#" class="fa fa-linkedin-square"></a></li>
@@ -83,11 +83,11 @@
                     <img src="~/HomeIndex/images/team-image2.jpg" class="img-responsive" alt="">
 
                     <div class="team-info">
-                        <h3></h3>
-                        <p>Pregnancy</p>
+                        <h3>Semih Kara</h3>
+                        <p>Kulak Burun Boğaz Uzmanı</p>
                         <div class="team-contact-info">
-                            <p><i class="fa fa-phone"></i> 010-070-0170</p>
-                            <p><i class="fa fa-envelope-o"></i> <a href="#">pregnancy@company.com</a></p>
+                            @*<p><i class="fa fa-phone"></i> 010-070-0170</p>*@
+                            <p><i class="fa fa-envelope-o"></i> <a>semihkara@gmail.com</a></p>
                         </div>
                         <ul class="social-icon">
                             <li><a href="#" class="fa fa-facebook-square"></a></li>
@@ -104,11 +104,11 @@
                     <img src="~/HomeIndex/images/team-image3.jpg" class="img-responsive" alt="">
 
                     <div class="team-info">
-                        <h3>Miasha Nakahara</h3>
-                        <p>Cardiology</p>
+                        <h3>Aylin Peker</h3>
+                        <p>Kadın Doğum Uzmanı</p>
                         <div class="team-contact-info">
-                            <p><i class="fa fa-phone"></i> 010-040-0140</p>
-                            <p><i class="fa fa-envelope-o"></i> <a href="#">cardio@company.com</a></p>
+                            @*<p><i class="fa fa-phone"></i> 010-040-0140</p>*@
+                            <p><i class="fa fa-envelope-o"></i> <a>aylinpeker@gmail.com</a></p>
                         </div>
                         <ul class="social-icon">
                             <li><a href="#" class="fa fa-twitter"></a></li>
