--- a/Online-Clinic/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Online-Clinic/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -2,6 +2,7 @@
 @model ForgotPasswordModel
 @{
     ViewData["Title"] = "Forgot your password?";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@ViewData["Title"]</h2>
