--- a/Online-Clinic/Views/Bağışçı/Index.cshtml
+++ b/Online-Clinic/Views/Bağışçı/Index.cshtml
@@ -9,7 +9,7 @@
 
 <!------ Include the above in your HEAD tag ---------->
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
+@*<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
 <section class="container mt-4 mb-4">
     <div class="container">
         <div class="row mb-3">
@@ -46,5 +46,5 @@
         </div>
 
     </div>
-</section>
+</section>*@
 
