--- a/Online-Clinic/Views/Home/Index.cshtml
+++ b/Online-Clinic/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@model Online_Clinic.Common.ViewModels.RandevuVM
+@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<Online_Clinic.Data.DbModels.Visitor> SignInManager
+@inject UserManager<Online_Clinic.Data.DbModels.Visitor> UserManager
 
 @{
     ViewData["Title"] = "Ana Sayfa";
@@ -203,77 +207,83 @@
     </div>
 </section>-->
 
-<!-- MAKE AN APPOINTMENT -->
-<section id="appointment" data-stellar-background-ratio="3" style="background-position: 0px 6726.2px;">
-    <div class="container">
-        <div class="row">
+@if (SignInManager.IsSignedIn(User))
+{
+    if (User.IsInRole(ResultConstant.HastaRole))
+    {
+        <!-- MAKE AN APPOINTMENT -->
+        <section id="appointment" data-stellar-background-ratio="3" style="background-position: 0px 6726.2px;">
+            <div class="container">
+                <div class="row">
 
-            <div class="col-md-6 col-sm-6">
-                <img src="~/HomeIndex/images/appointment-image.jpg" class="img-responsive" alt="">
+                    <div class="col-md-6 col-sm-6">
+                        <img src="~/HomeIndex/images/appointment-image.jpg" class="img-responsive" alt="">
+                    </div>
+
+                    <div class="col-md-6 col-sm-6">
+                        <!-- CONTACT FORM HERE -->
+                        <form id="appointment-form" asp-controller="Randevu" asp-action="Create" method="post">
+                            <!-- SECTION TITLE -->
+                            <div class="section-title wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
+                                <h2>Randevu Al</h2>
+                            </div>
+                            <div class="wow fadeInUp" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
+                                <div asp-validation-summary="All" class="text-danger"></div>
+                                <div class="col-md-6 col-sm-6">
+                                    <label asp-for="AdSoyad">Tam Adınız</label>
+                                    <input asp-for="AdSoyad" class="form-control" />
+                                </div>
+
+                                <div class="col-md-6 col-sm-6">
+                                    <label asp-for="Bölüm">Bölüm Seçiniz</label>
+                                    <select class="form-control" asp-for="Bölüm">
+                                        <option action>Seçiniz</option>
+                                        <option>Beyin ve Sinir Cerrahisi</option>
+                                        <option>Kalp ve Damar Cerrahisi</option>
+                                        <option>Çocuk Cerrahisi</option>
+                                        <option>Genel Cerrahi</option>
+                                        <option>Göğüs Cerrahisi</option>
+                                        <option>Kulak Burun Boğaz Hastalıkları</option>
+                                        <option>Plastik Cerrahi</option>
+                                        <option>Ortopedi</option>
+                                        <option>Göz Hastalıkları</option>
+                                        <option>Üroloji</option>
+                                    </select>
+                                </div>
+
+
+                                @*<div class="col-md-6 col-sm-6">
+                                        <label asp-for="Tarih">Tarih Seçiniz</label>
+                                        <input asp-for="Tarih" type="date" class="form-control">
+                                    </div>*@
+
+                                @*<div class="col-md-6 col-sm-6">
+                                        <label asp-for="Saat">Saat Seçiniz</label>
+                                        <input type="time" name="time" value="" class="form-control">
+                                    </div>*@
+
+
+
+                                <div class="col-md-12 col-sm-12">
+                                    <label asp-for="Tarih">Tarih Seçiniz</label>
+                                    <input asp-for="Tarih" type="date" class="form-control">
+                                    <label asp-for="Telefon">Telefon Numaranız</label>
+                                    <input asp-for="Telefon" class="form-control">
+                                    <label asp-for="Email">E-mail Adresiniz</label>
+                                    <input asp-for="Email" class="form-control" />
+                                    @*<label asp-for="Mesaj">Eklemek İstediğiniz Bir Mesaj Var mı?</label>
+                                        <textarea asp-for="Mesaj" class="form-control"></textarea>*@
+                                    <button type="submit" class="form-control" id="cf-submit" name="submit">Randevu Al</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
             </div>
-
-            <div class="col-md-6 col-sm-6">
-                <!-- CONTACT FORM HERE -->
-                <form id="appointment-form" asp-controller="Randevu" asp-action="Create" method="post">
-                    <!-- SECTION TITLE -->
-                    <div class="section-title wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                        <h2>Randevu Al</h2>
-                    </div>
-                    <div class="wow fadeInUp" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="col-md-6 col-sm-6">
-                            <label asp-for="AdSoyad">Tam Adınız</label>
-                            <input asp-for="AdSoyad" class="form-control" />
-                        </div>
-
-                        <div class="col-md-6 col-sm-6">
-                            <label asp-for="Bölüm">Bölüm Seçiniz</label>
-                            <select class="form-control" asp-for="Bölüm">
-                                <option action>Seçiniz</option>
-                                <option>Beyin ve Sinir Cerrahisi</option>
-                                <option>Kalp ve Damar Cerrahisi</option>
-                                <option>Çocuk Cerrahisi</option>
-                                <option>Genel Cerrahi</option>
-                                <option>Göğüs Cerrahisi</option>
-                                <option>Kulak Burun Boğaz Hastalıkları</option>
-                                <option>Plastik Cerrahi</option>
-                                <option>Ortopedi</option>
-                                <option>Göz Hastalıkları</option>
-                                <option>Üroloji</option>
-                            </select>
-                        </div>
-
-
-                        @*<div class="col-md-6 col-sm-6">
-                            <label asp-for="Tarih">Tarih Seçiniz</label>
-                            <input asp-for="Tarih" type="date" class="form-control">
-                        </div>*@
-
-                        @*<div class="col-md-6 col-sm-6">
-                            <label asp-for="Saat">Saat Seçiniz</label>
-                            <input type="time" name="time" value="" class="form-control">
-                        </div>*@
-
-
-
-                    <div class="col-md-12 col-sm-12">
-                        <label asp-for="Tarih">Tarih Seçiniz</label>
-                        <input asp-for="Tarih" type="date" class="form-control">
-                        <label asp-for="Telefon">Telefon Numaranız</label>
-                        <input asp-for="Telefon" class="form-control">
-                        <label asp-for="Email">E-mail Adresiniz</label>
-                        <input asp-for="Email" class="form-control" />
-                        @*<label asp-for="Mesaj">Eklemek İstediğiniz Bir Mesaj Var mı?</label>
-        <textarea asp-for="Mesaj" class="form-control"></textarea>*@
-                        <button type="submit" class="form-control" id="cf-submit" name="submit">Randevu Al</button>
-                    </div>
-                    </div>
-                </form>
-            </div>
-
-        </div>
-    </div>
-</section>
+        </section>
+    }
+}
 
 <script src="~/HomeIndex/js/jquery.js"></script>
 <script src="~/HomeIndex/js/bootstrap.min.js"></script>
