--- a/Online-Clinic/Views/Talep/Create.cshtml
+++ b/Online-Clinic/Views/Talep/Create.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
 
-<h4>BağışTalebi</h4>
+<h4>Bağış Talebi Oluştur</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form class="form-horizontal" asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Hasta.Ad" class="control-label"></label>
                 <input asp-for="Hasta.Ad" class="form-control" />
@@ -29,7 +28,7 @@
                 <span asp-validation-for="TalepTarihi" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TalepAçıklaması" class="control-label"></label>
+                <label asp-for="TalepAçıklaması" class="control-label">Talep Açıklaması</label>
                 <input asp-for="TalepAçıklaması" class="form-control" />
                 <span asp-validation-for="TalepAçıklaması" class="text-danger"></span>
             </div>
@@ -41,7 +40,7 @@
             </div>
         </div>*@
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Gönder" class="btn btn-default" />
             </div>
         </form>
     </div>
