--- a/Online-Clinic/Views/Talep/Index.cshtml
+++ b/Online-Clinic/Views/Talep/Index.cshtml
@@ -24,6 +24,7 @@
             <thead>
                 <tr>
                     <th>Tarih</th>
+                    <th>Ad</th>
                     <th>Açıklama</th>
                 </tr>
             </thead>
@@ -33,6 +34,7 @@
                     <tr>
                         @*<td>@item.</td>*@
                         <td>@item.TalepTarihi</td>
+                        <td>@item.AdSoyad</td>
                         <td>@item.TalepAçıklaması</td>
                     </tr>
                 </tbody>
