--- a/Online-Clinic/Views/Talep/Create.cshtml
+++ b/Online-Clinic/Views/Talep/Create.cshtml
@@ -13,20 +13,20 @@
         <form class="form-horizontal" asp-action="Create">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Hasta.Ad" class="control-label"></label>
-                <input asp-for="Hasta.Ad" class="form-control" />
-                <span asp-validation-for="Hasta.Ad" class="text-danger"></span>
+                <label asp-for="AdSoyad" class="control-label">Ad Soyad</label>
+                <input asp-for="AdSoyad" class="form-control" />
+                <span asp-validation-for="AdSoyad" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Hasta.Soyad" class="control-label"></label>
                 <input asp-for="Hasta.Soyad" class="form-control" />
                 <span asp-validation-for="Hasta.Soyad" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+            @*<div class="form-group">
                 <label asp-for="TalepTarihi" class="control-label">Talep Tarihi</label>
                 <input asp-for="TalepTarihi" class="form-control" />
                 <span asp-validation-for="TalepTarihi" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="TalepAçıklaması" class="control-label">Talep Açıklaması</label>
                 <input asp-for="TalepAçıklaması" class="form-control" />
@@ -46,9 +46,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
