--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -103,23 +103,24 @@
                                 @if (User.IsInRole(ResultConstant.DoktorRole))
                                 {
                                     <li><a asp-controller="Randevu" asp-action="Index" class="smoothScroll">Randevular</a></li>
-                                    <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
+                                    <li><a asp-controller="Hikaye" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
                                 }
 
 
                                 @if (User.IsInRole(ResultConstant.HastaRole))
                                 {
                                     <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
-                                    <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
+                                    <li><a asp-controller="Hikaye" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
                                     <li><a asp-controller="Randevu" asp-action="Create" class="smoothScroll">Randevu Al</a></li>
                                     <li><a asp-controller="Talep" asp-action="Create" class="smoothScroll">Bağış Talebi</a></li>
+                                    <li><a asp-controller="Hikaye" asp-action="Create" class="smoothScroll">Hikayeni Ekle</a></li>
 
                                 }
 
                                 @if (User.IsInRole(ResultConstant.BağışçıRole))
                                 {
                                     <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
-                                    <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
+                                    <li><a asp-controller="Hikaye" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
                                     <li><a asp-controller="Talep" asp-action="Create" class="smoothScroll">Bağış Yap</a></li>
                                 }
 
