--- a/Online-Clinic/Views/Hikaye/Create.cshtml
+++ b/Online-Clinic/Views/Hikaye/Create.cshtml
@@ -38,7 +38,7 @@
                 <span asp-validation-for="TedaviEdenDoktor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Gönder" class="btn btn-default" />
+                <input type="submit" value="Güncelle" class="btn btn-default" />
             </div>
         </form>
     </div>
