--- a/Online-Clinic/Views/Home/Index.cshtml
+++ b/Online-Clinic/Views/Home/Index.cshtml
@@ -21,7 +21,6 @@
 <link rel="stylesheet" href="~/HomeIndex/css/animate.css">
 <link rel="stylesheet" href="~/HomeIndex/css/owl.carousel.css">
 <link rel="stylesheet" href="~/HomeIndex/css/owl.theme.default.min.css">
-
 <!-- ABOUT -->
 <section id="about" style="margin-top:60px">
     <div class="container">
@@ -29,7 +28,7 @@
 
             <div class="col-md-6 col-sm-6">
                 <div class="about-info">
-                    <h2 class="wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">Online-Clinic</h2>
+                    <h2 class="wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;"><img src="~/logo/logoo.png" /></h2>
                     <div class="wow fadeInUp animated" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">
                         <p>En güncel tedavi yöntemleri için kayıt olup doktorlarımızla iletişime geçebilirsiniz</p>
                     </div>
