--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -71,19 +71,15 @@
     <!-- MENU -->
     <div id="sticky-wrapper" class="sticky-wrapper" style="height: 70px;">
         <section class="navbar navbar-default navbar-static-top" role="navigation" style="width: 974px;">
-            <div class="container">
-
-                <div class="navbar-header">
+            <div class="container" style="vertical-align: middle">
+                <a asp-controller="Home" asp-action="Index" class="navbar-brand"><img src="~/logo/logoo.png" /></a>
+                <div>
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon icon-bar"></span>
                         <span class="icon icon-bar"></span>
                         <span class="icon icon-bar"></span>
                     </button>
-
-                    <!-- lOGO TEXT HERE -->
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">Online-Clinic</a>
                 </div>
-
                 <!-- MENU LINKS -->
                 <div class="collapse navbar-collapse">
                     <partial name="_LoginPartial" />
@@ -94,9 +90,9 @@
                             {
                                 @if (User.IsInRole(ResultConstant.AdminRole))
                                 {
-                                    <li><a asp-controller="Bağışçı" asp-action="Index" class="smoothScroll">Bağışçılar</a></li>
-                                    <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
-                                    <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hastalar</a></li>
+                                    <li><a asp-controller="Visitor" asp-action="ListBağışçı" class="smoothScroll">Bağışçılar</a></li>
+                                    <li><a asp-controller="Visitor" asp-action="ListDoktor" class="smoothScroll">Doktorlar</a></li>
+                                    <li><a asp-controller="Visitor" asp-action="ListHasta" class="smoothScroll">Hastalar</a></li>
                                     <li><a asp-controller="Talep" asp-action="Index" class="smoothScroll">Bağış Talepleri</a></li>
                                 }
 
@@ -113,7 +109,7 @@
                                     <li><a asp-controller="Hikaye" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
                                     <li><a asp-controller="Randevu" asp-action="Create" class="smoothScroll">Randevu Al</a></li>
                                     <li><a asp-controller="Talep" asp-action="Create" class="smoothScroll">Bağış Talebi</a></li>
-                                    <li><a asp-controller="Hikaye" asp-action="Create" class="smoothScroll">Hikayeni Ekle</a></li>
+                                    <li><a asp-controller="Hikaye" asp-action="Create" class="smoothScroll">Profil</a></li>
 
                                 }
 
