--- a/Online-Clinic/Views/Hikaye/Index.cshtml
+++ b/Online-Clinic/Views/Hikaye/Index.cshtml
@@ -20,22 +20,21 @@
 <body>
     <section class="container mt-4 mb-4">
         <div class="container">
-            <div class="row mb-3">
+            <div class="row mb-3" style="margin-right: 50px">
                 @foreach (var item in Model)
                 {
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="d-flex flex-row border rounded">
-                            <div class="p-0 w-25">
-                            </div>
-                            <div class="d-flex flex-row border rounded" style="border:1px">
-                                <h3 class="text-primary">@item.Ad @item.Soyad</h3>
+                            
+                            <div class="d-flex flex-row border rounded" style="border: black">
+                                <h3 class="text-primary" style="color: #74d14c">@item.Ad @item.Soyad</h3>
                                 <h5 class="text-info">@item.HastalıkGeçmişi</h5>
                                 
                                 <!--<ul class="m-0 float-left" style="list-style: none; margin:0; padding: 0">
                                     <li><i class="fab fa-message-square"></i> Mesaj Gönder</li>-->
                                     @*<li><i class="fab fa-twitter-square"></i> Twitter</li>*@
                                 <!--</ul>-->
-                                <p class="text-right m-0"><a href="#" class="btn btn-primary"><i class="far fa-user"></i> Profili Görüntüle</a></p>
+                                <p class="text-right m-0"><a href="#" type="button" style="background-color: #74d14c; border-radius: 5px; color: white; padding: 5px"><i class="far fa-user"></i> Profili Görüntüle</a></p>
                             </div>
                         </div>
                     </div>
