--- a/Online-Clinic/Views/Hikaye/Index.cshtml
+++ b/Online-Clinic/Views/Hikaye/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model System.Collections.Generic.IEnumerable<Online_Clinic.Common.ViewModels.HikayeVM>
+﻿@model System.Collections.Generic.List<Online_Clinic.Common.ViewModels.HikayeVM>
 
 @{
     ViewData["Title"] = "Index";
