--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -108,8 +108,7 @@
                                     <li><a asp-controller="Hikaye" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
                                     <li><a asp-controller="Randevu" asp-action="Create" class="smoothScroll">Randevu Al</a></li>
                                     <li><a asp-controller="Talep" asp-action="Create" class="smoothScroll">Bağış Talebi</a></li>
-                                    <li><a asp-controller="Hikaye" asp-action="Create" class="smoothScroll">Profil</a></li>
-
+                                    <li><a asp-controller="Hikaye" asp-action="Index" class="smoothScroll">Profil</a></li>
                                 }
 
                                 @if (User.IsInRole(ResultConstant.BağışçıRole))
